# adventofcode

./: .gitignore  Cargo.toml  README.md  pyproject.toml
2021/01/: increased_window.py
2021/02/: position.py
2021/03/: bits.py
2021/05/: vents.py
2021/06/: README.md  fish.js
2021/07/: Cargo.toml  Dockerfile  README.md  run.sh
2021/08/: Cargo.toml  README.md  run.sh
2021/09/: smoke.py
2021/10/: syntax.py
2021/11/: flash.py
2021/12/: spelunk.py
2021/13/: fold.py
2021/14/: Cargo.toml
2021/15/: risk.py
2021/16/: bits.py
2021/17/: probe_launch.py
2021/18/: math_homework.py
2021/19/: beacons.py
2021/20/: lit.py
2021/21/: dice.py
2021/22/: cubes.py
2021/23/: Cargo.toml  hallway.py
2021/24/: alu.py
2021/25/: cucumber.py
2021/day1/: increased.py
2021/day2/: position_aimed.py
2021/day3/: bits_survivor.py
2021/day4/: bingo.py  bingo_lose.py
2021/day5/: vents_diagonals.py
2021/day6/: README.md  part1.js  part2.js  run.sh  run_part1.sh  run_part2.sh
2022/01/: Cargo.toml
2022/02/: Cargo.toml  rockpaperscissors.py
2022/07/: Cargo.toml
2022/09/: rope.py
2022/12/: hills.py
2022/13/: packets.py
2022/15/: sensors.py
2022/16/: pressure.py
2022/18/: obsidian.py
2022/20/: encryption.py
2022/21/: Cargo.toml
2022/25/: Cargo.toml
2023/01/: day1.py
2023/04/: Cargo.toml
2023/05/: Cargo.toml
2023/06/: Cargo.toml
2023/08/: Cargo.toml
2023/09/: Cargo.toml
2023/11/: Cargo.toml
2023/12/: Cargo.toml
2023/14/: Cargo.toml
2023/15/: Cargo.toml
2023/16/: Cargo.toml
2023/17/: Cargo.toml
(+46 files in other folders)
