[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["ragnarok56 <kevin.nacios@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
