[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["ragnarok56 <kevin.nacios@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
networkx = "^2.6.3"
anytree = "^2.8.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
prospector = "^1.5.3"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
